refactoring: bakend tests for notifs